[gd_scene load_steps=15 format=2]

[ext_resource path="res://addons/Agartha/fonts/NotoSans/NotoSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://addons/Agartha/fonts/NotoSans/NotoSans-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://template/MainMenu/SaveSlot.gd" type="Script" id=3]

[sub_resource type="StyleBoxLine" id=1]
color = Color( 0.596078, 0.921569, 0.478431, 1 )
grow_begin = 0.0
grow_end = -70.0
thickness = 6
vertical = true

[sub_resource type="StyleBoxFlat" id=2]
draw_center = false
border_width_right = 6
border_width_bottom = 6
border_color = Color( 0.796078, 1, 0.721569, 0.133333 )

[sub_resource type="StyleBoxLine" id=3]
color = Color( 0.317647, 0.639216, 0.2, 1 )
grow_begin = 0.0
grow_end = -70.0
thickness = 6
vertical = true

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="ButtonGroup" id=5]

[sub_resource type="OpenSimplexNoise" id=6]

[sub_resource type="NoiseTexture" id=7]
width = 256
height = 144
noise = SubResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 22
outline_size = 1
outline_color = Color( 0, 0, 0, 0.333333 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="DynamicFont" id=10]
size = 17
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 17
use_filter = true
font_data = ExtResource( 1 )

[node name="SaveSlot" type="Button"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
keep_pressed_outside = true
group = SubResource( 5 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
image_background_color = Color( 0.317647, 0.639216, 0.2, 1 )

[node name="Screenshot" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -70.0
mouse_filter = 2
texture = SubResource( 7 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Error" type="Label" parent="Screenshot"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.890196, 0.223529, 0.152941, 1 )
text = "Incompatible"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Labels" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -70.0
grow_vertical = 0
mouse_filter = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="LineEdit" parent="Labels"]
margin_top = 9.0
margin_right = 1280.0
margin_bottom = 33.0
custom_styles/read_only = SubResource( 9 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color_uneditable = Color( 1, 1, 1, 1 )
align = 1
placeholder_text = "Untitled"

[node name="Date" type="Label" parent="Labels"]
margin_top = 37.0
margin_right = 1280.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 11 )
text = "01/01/2021 01:01"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="focus_exited" from="Labels/Name" to="." method="_on_name_edit_exited"]
[connection signal="text_changed" from="Labels/Name" to="." method="_on_name_changed"]
[connection signal="text_entered" from="Labels/Name" to="." method="_on_name_entered"]
